<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:transitionName="@string/transition_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/opined_politician_image_view"
            android:layout_width="85dp"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:transitionName="@string/transition_image"/>

        <TextView
            android:id="@+id/politician_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:maxLines="2"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:transitionName="@string/transition_name"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/opinions_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/your_opinion_title_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/empty_opinions_list_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/no_opinion_yet"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/your_opinion_title_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/opinions_recycler_view"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/your_opinion_title_text_view"/>

    <TextView
        android:id="@+id/your_opinion_title_text_view"
        style="@style/RobotoRegularTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/your_opinion_title"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/delete_opinion_image_button"
        app:layout_constraintBottom_toTopOf="@+id/current_opinion_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/current_opinion_text_view"
        style="@style/RobotoThinItalicTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingEnd="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingStart="8dp"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/opinion_text_input_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/delete_opinion_image_button"
        tools:visibility="visible"/>

    <ImageButton
        android:id="@+id/delete_opinion_image_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/description_delete_opinion_button"
        android:padding="8dp"
        android:src="@drawable/ic_close_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/send_opinion_image_button"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/opinion_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textAlignment="center"
        android:visibility="gone"
        app:counterMaxLength="1000"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/send_opinion_image_button"
        tools:visibility="visible">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/your_opinion_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLength="300"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorNeutral"
            android:visibility="gone"/>

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/send_opinion_image_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/description_send_opinion_button"
        android:padding="8dp"
        android:src="@drawable/ic_send_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>